--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -21,7 +21,7 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-  --color-primary: rgb(130, 38, 156);
+  --color-primary: hsl(287, 61%, 38%);
 }
 
 /* semantic color variables for this project */
